syntax = "proto3";//标明proto版本
 
package protobuf;//包名
 
//一个message相当于一个类
//1,2,3不代表参数默认值，而是参数标签
//repeated 可以理解为数组

/****复杂数据结构start*********/
message baseInfo
{
    int32 roleID = 1;
    string name = 2;
    int32 status = 3;
}
/****复杂数据结构end************/

message testLoginInfo
{
  int32 roleid = 1;
  int32 roomid = 2;
}
message playersInfo
{
    CalResponse cr = 1;
    repeated baseInfo baseInfos = 2;
}

message testAdd
{
  int32 a = 1;
  int32 b = 2;
}

//聊天协议
message chatBroadcast {
    string said = 1;
}

message StoreRequest {
  string name = 1;
  int32 num = 2;
  int32 result = 3;
  repeated string myList=4;
}

message CalResponse
{
  int32 status = 1;
}
 
message CSLoginInfo
{
  string UserName = 1;//账号
  string Password = 2;//密码
}
 
//发送登录请求
message CSLoginReq
{
  CSLoginInfo LoginInfo = 1; 
}
//登录请求回包数据
message CSLoginRes
{
   uint32 result_code = 1; 
}